bindings/c/include/efb.h

/// The [Route] to fly.
///
/// This type is a wrapper around the [Route] with an initial cruise speed,
/// level and all legs along the route.
///
/// The [`efb_route_legs_first`] and [`efb_route_legs_next`] functions return a
/// leg of the route and can be used to iterate over the route:
///
/// ```
/// for (const EfbLeg *leg = efb_route_legs_first(route);
///      leg != NULL;
///      leg = efb_route_legs_next(route))
/// ```
typedef struct EfbRoute EfbRoute;
/// A leg `from` one point `to` another.
typedef struct EfbLeg EfbLeg;
typedef EfbMeasurementf32AngleUnit EfbAngle;
typedef EfbMeasurementf32LengthUnit EfbLength;
typedef EfbMeasurementu32DurationUnit EfbDuration;
typedef EfbMeasurementf32SpeedUnit EfbSpeed;
/// The wind with a speed and direction
typedef struct {
  /// The direction from which the wind comes.
  EfbAngle direction;
  /// The wind speed.
  EfbSpeed speed;
} EfbWind;
typedef struct {
  EfbVerticalDistance_Tag tag;
  union {
    struct {
      uint16_t agl;
    };
    struct {
      uint16_t altitude;
    };
    struct {
      uint16_t fl;
    };
    struct {
      uint16_t msl;
    };
  };
} EfbVerticalDistance;
/// Decreases the reference count of the route.
void
efb_fms_route_unref(EfbRoute *route);
/// Returns the estimated time enroute.
///
/// If the ETE can't be calculated, a NULL pointer is returned.
const EfbDuration *
efb_route_ete(EfbRoute *route);
/// Returns the first leg in the route.
const EfbLeg *
efb_route_legs_first(EfbRoute *route);
/// Returns the next leg in the route.
///
/// When the end of the legs is reached, this function returns a null pointer.
const EfbLeg *
efb_route_legs_next(EfbRoute *route);
/// Returns the ident from where the leg starts.
///
/// # Safety
///
/// The returned value needs to be freed by [`efb_string_free`].
char *
efb_leg_get_from(const EfbLeg *leg);
/// Returns the ident to where the leg ends.
///
/// # Safety
///
/// The returned value needs to be freed by [`efb_string_free`].
char *
efb_leg_get_to(const EfbLeg *leg);
/// Returns the leg's level or null if unknown.
const EfbVerticalDistance *
efb_leg_get_level(const EfbLeg *leg);
/// Returns the wind along the leg or null if unknown.
const EfbWind *
efb_leg_get_wind(const EfbLeg *leg);
/// Returns the leg's true airspeed or null if unknown.
const EfbSpeed *
efb_leg_get_tas(const EfbLeg *leg);
/// Returns the true heading considering the WCA or null if unknown.
const EfbAngle *
efb_leg_get_heading(const EfbLeg *leg);
/// Returns the magnetic heading considering the variation at the start of the
/// leg or null if unknown.
const EfbAngle *
efb_leg_get_mh(const EfbLeg *leg);
/// Returns the bearing between the two points.
const EfbAngle *
efb_leg_get_bearing(const EfbLeg *leg);
/// Returns the magnetic course taking the magnetic variation from the starting
/// point into consideration.
const EfbAngle *
efb_leg_get_mc(const EfbLeg *leg);
/// Returns the distance between the leg's two points.
const EfbLength *
efb_leg_get_dist(const EfbLeg *leg);
/// Returns the ground speed in knots or null if unknown.
const EfbSpeed *
efb_leg_get_gs(const EfbLeg *leg);
/// Returns the estimated time enroute the leg or null if unknown.
const EfbDuration *
efb_leg_get_ete(const EfbLeg *leg);